# stmbl

./: .clang-format  .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile  README.md  base.mak  cleanup.sh  sin.c  sin.h  stm32_flash.ld  term.trace  timer.txt  toolchain.mak
bootloader/: Makefile  stm32_flash.ld
bootloader/src/: main.c  system_stm32f4xx.c  version.c  version.h
conf/: amk.txt  asyc_uf_3kw.txt  b&r_8msa2m.txt  bene-stepper.txt  bene_sanyo.txt  bene_uf_2kw.txt  bergerlahr.txt  dual_dc_sserial.txt  e240.txt  fanuc_a06b.txt  festo-fs3mg.txt  festo.txt  haas.txt  haas_spindle.txt  haas_spindle_slip.txt  haas_spindle_uf.txt  link.txt  manutec_r15_0.txt  manutec_r15_1.txt  manutec_r15_2.txt  manutec_r15_3.txt  manutec_r15_4.txt  manutec_r15_5.txt  manutec_r15_6.txt  mitsu.txt  move.txt  omron.txt  p50b.txt  p50b08100.txt  psi.txt  r2aa04003f.txt  r2aa06020f.txt  rexroth.txt  rv_e2_3.txt  sda_b.txt  sensorless_perske.txt  sgmph-04aa.txt  siemens_1k6.txt  sm060.txt  sr60-axis1.txt  (+17 more)
conf/experimental/: amk.txt  bene-stepper.txt  kollmorgen.txt  manutec_r15_5.txt  moog.txt  precise.txt  psi.txt  sr60-axis3.txt  sr8-z.txt
conf/template/: acim.txt  com_test.txt  conf.txt  dc.txt  en.txt  enc_cmd.txt  enc_fb0.txt  enc_ws_fb0.txt  encdmm_fb0.txt  encm_fb0.txt  encs_fb0.txt  encws_fb0.txt  fanuc_fb0.txt  fanuc_io.txt  id_mot.txt  id_pmsm.txt  id_sys.txt  iddc.txt  idm.txt  idp.txt  idpmsm.txt  ids.txt  jog_cmd.txt  linkv3.txt  misc.txt  mpid.txt  mpmsm.txt  pid.txt  pmsm.txt  pos_filter.txt  psi.conf  res_fb0.txt  rl.txt  smartabs_fb0.txt  sserial.txt  sserial_dummy.txt  sserial_uf.txt  uf.txt  uvw.txt  uvw_fb1.txt
context_switch/: Makefile
context_switch/lib/: Makefile
context_switch/src/: ang.h  main.c  param.c  printf.h  scanf.c  setup.c  setup.h  stlinky.c  stlinky.h  stm32_ub_dac_dma.c  system_stm32f4xx.c
docs/src/: Getting Started.adoc  Getting Started.html  HAL Reference.adoc  HAL Reference.html  cmd.adoc  feedback.adoc  motor.adoc  servoterm.adoc  supply.adoc  tuning.adoc
f3_boot/: Makefile  STM32F303CBTx_FLASH.ld
f3_boot/inc/: stm32f3xx_hal_conf.h
f3_boot/src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  tim.c  version.c
f3dfu/: Makefile  STM32F303CBTx_FLASH.ld  dfu.ioc  f3dfu.ioc
f3dfu/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usb_device.h  usbd_conf.h  usbd_desc.h  usbd_dfu_if.h
f3dfu/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  system_stm32f3xx.c  usb_device.c  usbd_conf.c  usbd_desc.c  usbd_dfu_if.c
framework/: base.mak  toolchain.mak
framework/comps/: ac.c  auto_ac.c  dc.c  dq.c  field.c  fmove.c  hal_test.c  idx_home.c  iit_old.c  or.c  pmsm.c  reslimit.c  rlpsij.c  uf.c  vel_int.c  wobl.c  ypid.c
framework/libs/: libs.mak
framework/tools/: bootloader.py  crc32.py  create_cmd.py
graphviz/: test.cpp  test.dot  test.hal
hw/: clip.dxf
hw/eagle/: IRAMX-drv-v2.brd  IRAMX-drv-v2.sch  IRAMX-drv-v3.1.brd  IRAMX-drv-v3.1.sch  IRAMX-drv-v3.2.brd  IRAMX-drv-v3.2.sch  IRAMX-drv-v3.3.brd  IRAMX-drv-v3.3.sch  IRAMX-drv-v3.4.brd  IRAMX-drv-v3.4.sch  IRAMX-drv-v3.brd  IRAMX-drv-v3.sch  Untitled_b.brd  Untitled_b.sch  Untitled_b2.sch  acs.brd  acs.sch  bene2stmbl-smd.brd  bene2stmbl-smd.sch  res-standalone.brd  res-standalone.sch  res.brd  res.sch  res_v2.brd  res_v2.sch  stm32f100.brd  stm32f100.sch  stmdc.brd  uhu-adapter.brd  uhu-adapter.ioc  uhu-adapter.sch
hw/spice/: back_emf.asc  res.asc  res2.1.asc  res2.3 copy.asc  res2.3.asc  res2.4.asc  res2.5.asc  res2.6.asc  strom.asc  strom_fb.asc  volt.asc
hw/tools/: case_v4.stl  clip.dxf  lib.scad  pcb_simple.scad  pos2scad.py  sheet_metal_case.dxf  sheet_metal_case.scad  sheet_metal_case_08.dxf  sheet_metal_case_io_08.dxf  stmbl.scad  v4_bracket.dxf  (+5 more)
inc/: crc.h  link.h  main.h  setup.h  sserial.h  stm32f30x_conf.h  stm32f4xx_conf.h  stm32f4xx_it.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h
lib/: Makefile  startup_stm32f4xx.s
memtemp/: data.txt  memtemp.c  sserial.sr  tocdump.c  tocdump.txt
new_term/: CMakeLists.txt  mathplot.cpp  mathplot.h  packet.h  term.cpp
qt_term/: CMakeLists.txt
qt_term/include/: functiongraph.hpp  glwidget.hpp  mainwindow.hpp
qt_term/src/: functiongraph.cpp  glwidget.cpp  main.cpp  mainwindow.cpp
qt_term/ui/: mainwindow.ui
shared/: angle.c  angle.h  commands.c  commands.h  common.c  common.h  common_f1.c  common_f1.h  config.c  config.h  crc.c  crc.sh  crc16.c  crc16.h  crc32.c  crc32.h  crc8.c  crc8.h  defines.h  endat.c  endat.h  f3hw.h  flashconf.c  hal.c  hal.h  hal_term.c  hal_term.h  hw_math.h  newconf.txt  ringbuf.c  ringbuf.h  stmbl_talk.h  version.h  version_number.h  yaskawa_crc16.c  yaskawa_crc16.h
sim/: gp  pwm.html  sim.cpp  sim.h
src/: ang.h  ang_test.c  angle.c  angle.h  cdc.c  cdc.h  comp1.c  comp2.c  conf.h  config.c  crc.h  defines_res.h  defines_res.h.gch  df.comp  div.comp  eeprom.c  eeprom.h  enc.comp  hal.c  hal.h  hal_conf.c  hal_conf.h  hal_term.c  hal_term.h  input.c  input.h  link.c  link.h  main.c  main.h  math.h  minmax.comp  misc.c  misc.h  mod.comp  mul.comp  packet.c  packet.h  param.c  param.h  (+38 more)
stm32f100/: Makefile  stm32_flash.ld
stm32f103/: 103_hv.ioc  Makefile  stm32_flash.ld
stm32f303/: Makefile  STM32F303CBTx_FLASH.ld
stmbl/: Makefile
term/: CMakeLists.txt  CMakeLists.txt.user.b4a4c27  Makefile  basicdrawpane.cpp  basicdrawpane.hpp  dqdraw.cpp  dqdraw.hpp  dqframe.cpp  dqframe.hpp  graph.cpp  graph.f.glsl  graph.v.glsl  main.cpp  main.vs  mainframe.cpp  mainframe.hpp  scope.cpp  scope.hpp  shader_utils.cpp  shader_utils.h
term/cmake/Modules/: Findlibserialport.cmake  MacOSXBundleInfo.plist.in
term/conf/: config.h.in
term/include/: glwidget.hpp  mainwindow.hpp
term/resources/: stmbl.icns
term/shader/: main.fs  main.fs~  main.vs  main.vs~
term/src/: glwidget.cpp  main.cpp
term/ui/: mainwindow.ui
term/win32/: build.sh
tools/: add_version_info.py  bootloader.py  checkcrc.py  crc32.py  create_cmd.py  create_comp_h.py  create_config.py  create_hal_tbl.py  dfu-convert.py  elf.py  file_updater.py  gentable.c  inc_comps.py
(+1172 files in other folders)
